--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,4 @@
-readme - Snap! 4.0
-------------------
-
+<h1>readme - snap/turtlestich
 this document is just a stub as of now. For the first official release of Snap! 4.0 it will contain release notes covering the following issues:
 
 saving, loading, exporting, importing
@@ -22,3 +20,4 @@ SVG support limitations
 OS/X: turn LCD font smoothing off
 
 Beware of third-party Chrome toolbars and iFrames
+#readme -- puzzlepiece
