--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
-<h1>readme - snap/turtlestich
-this document is just a stub as of now. For the first official release of Snap! 4.0 it will contain release notes covering the following issues:
+<h1>readme - snap/turtlestich</h1>
+<span>this document is just a stub as of now. For the first official release of Snap! 4.0 it will contain release notes covering the following issues:
 
 saving, loading, exporting, importing
 
