--- a/readme.html
+++ b/readme.html
@@ -19,5 +19,5 @@ SVG support limitations
 
 OS/X: turn LCD font smoothing off
 
-Beware of third-party Chrome toolbars and iFrames
-#readme -- puzzlepiece
+Beware of third-party Chrome toolbars and iFrames</span>
+eadme -- puzzlepiece
