--- a/readme.html
+++ b/readme.html
@@ -20,4 +20,4 @@ SVG support limitations
 OS/X: turn LCD font smoothing off
 
 Beware of third-party Chrome toolbars and iFrames</span>
-eadme -- puzzlepiece
+<h1>adme -- puzzlepiece
