--- a/readme.html
+++ b/readme.html
@@ -7,8 +7,8 @@ artefacts: projects, blocks, sprites
 
 URL options: #run: #open: #lang: #signup
 
-dynamic content (currently deactivated):
-	http://snap.berkeley.edu/cloudmsg.txt
+dynamic content (currently deactivated):</span>
+	<a href=http://snap.berkeley.edu/cloudmsg.txt>cloudg
 	http://snap.berkeley.edu/motd.txt
 
 supported browsers, problems with the Android virtual keyboard
@@ -20,4 +20,4 @@ SVG support limitations
 OS/X: turn LCD font smoothing off
 
 Beware of third-party Chrome toolbars and iFrames</span>
-<h1>adme -- puzzlepiece
+<h1>readme -- puzzlepiece</h1>
