--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@ artefacts: projects, blocks, sprites
 URL options: #run: #open: #lang: #signup
 
 dynamic content (currently deactivated):</span>
-	<a href=http://snap.berkeley.edu/cloudmsg.txt>cloudg
+	<a href=http://snap.berkeley.edu/cloudmsg.txt>cloudmsg.txt</a>
 	http://snap.berkeley.edu/motd.txt
 
 supported browsers, problems with the Android virtual keyboard
