Now it is in html

--- a/readme.html
+++ b/readme.html
@@ -9,9 +9,9 @@ URL options: #run: #open: #lang: #signup
 
 dynamic content (currently deactivated):</span>
 	<a href=http://snap.berkeley.edu/cloudmsg.txt>cloudmsg.txt</a>
-	http://snap.berkeley.edu/motd.txt
+	<a href=http://snap.berkeley.edu/motd.txt>motd.txt</a>
 
-supported browsers, problems with the Android virtual keyboard
+<span>supported browsers, problems with the Android virtual keyboard
 
 supported browser / OS settings
 
